--- a/challenge/stylekrsna.css
+++ b/challenge/stylekrsna.css
@@ -1,19 +1,30 @@
-p{
-    color: red;
-    position: relative;
-    -webkit-animation: mymove 4s;  /* Safari 4.0 - 8.0 */
-    -webkit-animation-fill-mode: forwards; /* Safari 4.0 - 8.0 */
-    animation: mymove 4s;
-    animation-fill-mode: forwards;
-  }
-  
-  /* Safari 4.0 - 8.0 */
-  @-webkit-keyframes mymove {
-    from {top: 0px;}
-    to {top: 640px; color: blue;font-size: 100px}
-  }
-  
-  @keyframes mymove {
-    from {top: 0px;}
-    to {top:640px; color: blue;font-size: 100px}
-  }
+body {
+  margin: 0;
+  padding: 0;
+  background-image: url('HYFgrouppic.jpg');
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: 100%; 
+    overflow: hidden;
+}
+h1{
+    color:blue;
+    text-align: center;
+    font-size:40px;   
+}
+.rainbow {
+  display: flex;
+  flex-wrap: wrap;
+ 
+}
+img {
+  width: 200px;
+  height: 200px;
+  /*  border: 1px solid gray; */
+  border-radius: 50%;
+  transition: transform, opacity;
+  transition-duration: 5s;
+}
+/* #indigo {
+  transform: translateY(-400px);
+} */
