--- a/rainbows/stylerainbow.css
+++ b/rainbows/stylerainbow.css
@@ -2,7 +2,7 @@
 body{
     width:100%;
     height:100%;
-    background-image: url('grouppic.jpg');
+    background-image: url('HYF.png');
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: 100%; 
