--- a/rainbows/stylerainbow.css
+++ b/rainbows/stylerainbow.css
@@ -1,28 +1,145 @@
-
-body{
-    width:100%;
-    height:100%;
-    background-image: url('HYF.png');
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-size: 100%; 
-    overflow: hidden;
-}
-h1{
-    font-size: 58px;
+body {
+  width: 70%;
+  height: 70%;
+  /*  background-image: url('HYF.png'); */
+  background-image: url("holibg.jpg");
+  background-color: black;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  overflow: hidden;
 }
 
-canvas{
-    
-    transition-duration: 5s;
-    position:absolute;
+h1 {
+  font-size: 58px;
+}
+p {
+  visibility: hidden;
+}
+#HYF {
+  text-align: center;
+  justify-content: center;
+  font-size: 70px;
+  font-family: cursive;
+  font-style: bold;
+  animation: HYFText 4s;
+  animation-fill-mode: forwards;
+}
+@keyframes HYFText {
+  from {
+    visibility: visible;
+    font-size: 30px;
+    color: rgb(44, 11, 99);
+    right: 1300px;
+  }
+  to {
+    font-size: 70px;
+    right: 400px;
+    color: yellowgreen;
+    visibility: visible;
+  }
+}
+#holi {
+  text-align: center;
+  justify-content: center;
+  font-size: 70px;
+  font-family: cursive;
+
+  animation: holiText 4s;
+  animation-delay: 4s;
+  animation-fill-mode: forwards;
+}
+@keyframes holiText {
+  from {
+    visibility: visible;
+    font-size: 30px;
+    color: rgb(44, 11, 99);
+    left: 30px;
+  }
+  to {
+    font-size: 70px;
+    left: 500px;
+    color: rgb(42, 46, 104);
+  }
+}
+#and {
+  text-align: center;
+  justify-content: center;
+  font-size: 70px;
+  font-family: cursive;
+
+  animation: andText 4s;
+  animation-delay: 8s;
+  animation-fill-mode: forwards;
+}
+@keyframes andText {
+  from {
+    visibility: visible;
+    font-size: 30px;
+    color: rgb(175, 153, 53);
+    right: 0px;
+  }
+  to {
+    font-size: 70px;
+    right: 600px;
+    color: rgb(65, 186, 202);
+  }
+}
+#nowruz {
+  text-align: center;
+  justify-content: center;
+  font-size: 70px;
+  font-family: cursive;
+
+  animation: nowruzText 4s;
+  animation-delay: 8s;
+  animation-fill-mode: forwards;
+}
+@keyframes nowruzText {
+  from {
+    visibility: visible;
+    font-size: 30px;
+    color: rgb(175, 153, 53);
+    right: 1300px;
+  }
+  to {
+    font-size: 70px;
+    right: 400px;
+    color: rgb(65, 186, 202);
+  }
+}
+span {
+  visibility: hidden;
+  font-size: 70px;
+  font-family: cursive;
+  animation: HYFfinalText 6s;
+  animation-delay: 10s;
+  animation-fill-mode: forwards;
+}
+@keyframes HYFfinalText {
+  from {
+     float:right;
+    font-size: 30px;
+    color: rgb(175, 153, 53);
+    }
+  to {
+    float:right;
+    font-size: 70px;
+    color: rgb(65, 186, 202);
+    visibility: visible;
+  }
+}
+
+canvas {
+  transition-duration: 7s;
+  position: absolute;
 }
 img {
-    width: 200px;
-    height: 200px;
-    /*  border: 1px solid gray; */
-    border-radius: 50%;
-    transition: transform, opacity;
-    transition-duration: 5s;
-    position:absolute;
+  width: 200px;
+  height: 200px;
+  /*  border: 1px solid gray; */
+  border-radius: 50%;
+  transition: transform, opacity;
+  transition-duration: 10s;
+  position: absolute;
 }
