--- a/rainbows/stylerainbow.css
+++ b/rainbows/stylerainbow.css
@@ -2,7 +2,7 @@ body {
   width: 70%;
   height: 700%;
   /*  background-image: url('HYF.png'); */
-  background-image: url("holicolors.jpg");
+  background-image: url("holi.jpg");
  /*  background-color: black; */
   background-attachment: fixed;
   background-repeat: no-repeat;
@@ -83,7 +83,8 @@ p {
   font-family: cursive;
 
   animation: andText 2s;
-  animation-delay: 8s;
+  animation-delay: 3s;
+  animation: nowruz 12s;
   animation-fill-mode: forwards;
 }
 @keyframes andText {
@@ -146,7 +147,7 @@ p {
     font-size: 130px;
     top:400px;
     left: 400px;
-    color: rgb(209, 34, 130);
+    color: rgb(176, 39, 221);
     visibility: visible;
   }
 }
