--- a/newToday/style.css
+++ b/newToday/style.css
@@ -6,14 +6,16 @@ body{
     align-items: center;
     background: radial-gradient(#ff0000,#5a0000);
     min-height:100vh;
-    font-family: 'Lobster Two', cursive;
+    /* overflow: hidden; */
 }
 .heart{
-    position:relative;
+    /* position:relative; */
     height:200px;
     width:200px;
     background-color:e80202;
     transform:rotate(45deg);
+    position:absolute;
+    z-index: -1;
     box-shadow:30px 30px 200px rgba(0,0,0,0.5);
     animation:animate 1s linear infinite;
 }
@@ -57,3 +59,24 @@ body{
     border-top-left-radius: 100px;
     border-bottom-left-radius: 100px;
 }
+p{  
+    color: rgb(151, 125, 180);
+    font-family: 'Lobster Two', cursive;
+    position: absolute;
+    z-index: 1;
+}
+img{
+   justify-content: unset;
+   align-items: unset;
+    height:350px;
+    
+    z-index: 2;
+}
+canvas {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+  }
